# AutomatonOptimization

./: .gitignore  CMakeLists.txt  Homenda.py  INSTALL.txt  README.txt  makefile
automata/: HOWTO.txt  dfa_result.dot  makefile
automata/include/: bag_of_words.h  coded_transition_t.h  color_text.h  default_transition_t.h  dfa.h  geometry.h  global_settings.h  kmeans.h  logger.h  main.h  optimizer.h  particle.h  per_symbol_transition_t.h  point.h  pso.h  random_generator.h  random_sphere.h  standard_transition_t.h  transition_table.h  utils.h  words_generator.h
automata/res/: dfa_s10r5_1  dfa_s15r5_1  dfa_s20r10.txt  dfa_s4r5_1  dfa_s5r5_1  dfa_s6r5_1  dfa_s7r5_1  dfa_s8r5.txt  dfa_s8r5_1  dfa_s8r5_2  libgvc.so.6  test_jastrz.txt  test_sid (copy).txt  test_sid.txt  words_C4_Train1700_Test1700.txt  words_C4_Train2000_Test10000.txt  words_C5_Train7900_Test7900.txt
automata/src/: bag_of_words.cpp  coded_transition_t.cpp  console.cpp  default_transition_t.cpp  dfa.cpp  global_settings.cpp  main.cpp  optimizer.cpp  particle.cpp  per_symbol_transition_t.cpp  pso.cpp  random_sphere.cpp  standard_transition_t.cpp  transition_table.cpp  words_generator.cpp
automata/test/: dfa_result.dot  makefile
doc/: INSTALL.txt  TODO.txt  UTESTS.txt  unit_tests.txt
doc/code_doc/: typeinst_partial.tex
doc/code_doc_USE_THIS/: llncs.cls  typeinst_partial.tex
doc/final_doc/: typeins_final.blg  typeins_final.dvi  typeins_final.fdb_latexmk  typeins_final.fls  typeins_final.tex  typeins_final.tex.bak
graphviz/lib/: config6  (+14 more)
src/: main.py
test/: test_homenda.py  test_template.py
(+175 files in other folders)
